--- a/angularjs/view/cat-info.html
+++ b/angularjs/view/cat-info.html
@@ -1,7 +1,7 @@
 <div class="cat">
     <p class="cat-info">
-        <span class="cat-count"></span>
-        <span class="cat-name"></span>
+        <span class="cat-count">{{ info.cat.count }}</span>
+        <span class="cat-name">{{ info.cat.name }}</span>
     </p>
-    <img class="cat-img" src="">
+    <img class="cat-img" ng-src="{{ info.cat.src }}">
 </div>
